[package]
name = "xplan"
version = "0.1.0"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
edition = "2018"

description = "CLI tool to visualize task dependency"
keywords = ["graphviz", "task", "planning"]
license = "MIT"
repository = "https://github.com/greyblake/xplan"
homepage = "https://github.com/greyblake/xplan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.3"
thiserror = "1.0.13"
structopt = "0.3.9"
derive_more = "0.99.0"
